comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <main>
         <header>
-            <h1>Reclame aqui.</h1>
+            <h1>Reclame aqui SAMU.</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo001</p>
+            <h2>Portal destindo para reclamar, dar sugestoes ou elogiar os serviços do SAMU norte pioneiro.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quam atque rem impedit sit in asperiores distinctio cupiditate. Dolore dignissimos perferendis provident rerum distinctio magni quos aut deleniti ex molestias!</p>
         </article>
         <article>
             <h2>Artigo 002</h2>
