Pasta de Imagens

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reclame Aqui!</title>
+    <title>Curso em video</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
         <header>
-            <h1>Reclame aqui SAMU.</h1>
+            <h1>Curso Grátis.</h1>
         </header>
         <article>
             <h2>Portal destindo para reclamar, dar sugestoes ou elogiar os serviços do SAMU norte pioneiro.</h2>
