--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Curso Grátis.</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em video">
         </header>
         <article>
-            <h2>Portal destindo para reclamar, dar sugestoes ou elogiar os serviços do SAMU norte pioneiro.</h2>
+            <h2>Curso de HTML com CSS3.</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quam atque rem impedit sit in asperiores distinctio cupiditate. Dolore dignissimos perferendis provident rerum distinctio magni quos aut deleniti ex molestias!</p>
+            <p><a href="curso-js.html">Acesse o Curso de HTML5</a></p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript.</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quam sit similique corporis odio sed aliquam repellendus, eligendi sunt excepturi non magnam magni mollitia quas provident, molestias hic commodi! Ad.</p>
+            <p><a href="curso-js.html">Acesse o Curso de JS</a></p>
         </article>
     </main>
 </body>
