--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2>Curso de HTML com CSS3.</h2>
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quam atque rem impedit sit in asperiores distinctio cupiditate. Dolore dignissimos perferendis provident rerum distinctio magni quos aut deleniti ex molestias!</p>
-            <p><a href="curso-js.html">Acesse o Curso de HTML5</a></p>
+            <p><a href="curso-html.html">Acesse o Curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript.</h2>
